---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/tests/expect_mlir_fail_todo/pipe.arc

---
fun foo(x: i32) {
    x + x
}
fun bar(x: i32) {
    x |> foo |> foo
}
task Baz() ((~i32)) -> ((~i32)) {
    on event => emit event
}
fun qux(s: ~i32) {
    s |> Baz() |> Baz()
}

